# plinko2

./: Cargo.toml  index.html
pkg/: plinko2.wasm
src/: main.rs
src/modules/: mod.rs  scale.rs
